updated author email address

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Power Saver",
-    "author": "fw@dividuum.de",
+    "author": "Florian Wesch <fw@info-beamer.com>",
     "desc": "Powers down the screen at configurable times. Add to any of your Setups.",
     "repository": "https://github.com/info-beamer/package-power-saver"
 }
