add nesting information

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "author": "Florian Wesch <fw@info-beamer.com>",
     "desc": "Powers down the screen at configurable times. Add to any of your Setups.",
     "repository": "https://github.com/info-beamer/package-power-saver",
-    "platforms": ["pi/epoch-1", "pi/epoch-2"]
+    "platforms": ["pi/epoch-1", "pi/epoch-2"],
+    "nesting": {
+        "parents": "any",
+        "childs": []
+    }
 }
