Change name vol2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Power Saver",
+    "name": "Power Saver Custom1",
     "author": "Florian Wesch <fw@info-beamer.com>",
-    "desc": "Powers down the screen at configurable times. Add to any of your Setups.",
+    "desc": "Powers down the screen at configurable times. Add to any of your Setups. Modified by cainzjuss",
     "repository": "https://github.com/info-beamer/package-power-saver",
     "platforms": ["pi/epoch-1", "pi/epoch-2"],
     "offline": {
